<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ingeniumbd.jannatmostafiz.personalmedicalnotes.ForgetPassword">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_horizontal_margin">


                    <ImageView
                        android:layout_width="@dimen/logo_w_h"
                        android:layout_height="@dimen/logo_w_h"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="10dp"
                        android:src="@drawable/logo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:padding="10dp"
                        android:text="@string/lbl_forgot_password"
                        android:textColor="@color/colorAccent"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:gravity="center_horizontal"
                        android:padding="@dimen/activity_horizontal_margin"
                        android:text="@string/forgot_password_msg"
                        android:textColor="@color/colorAccent"
                        android:textSize="14dp" />

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/input_outline"
                        android:padding="15dp"
                        android:layout_marginTop="20dp"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        />

                    <Button
                        android:id="@+id/btn_reset_password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#fff"
                        android:layout_marginTop="20dip"
                        android:background="@color/colorAccent"
                        android:text="@string/btn_reset_password" />

                    <Button
                        android:id="@+id/btn_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@null"
                        android:text="@string/btn_back"
                        android:textColor="@color/colorAccent" />
                </LinearLayout>
            </ScrollView>
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="20dp"
                android:visibility="gone" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
